@@ -1,0 +1,7 @@
+fileFormatVersion: 2
+guid: 423c5fc418631c1459fbbf7965e9f6d9
+TextScriptImporter:
+  externalObjects: {}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
