@@ -9,16 +9,3 @@ Zuckerbork: “.....” [Neutral]
 
 Acacia: “Ahh.... No sir, sorry sir!” [Fear]
 ‘Shit I messed up! I need to think carefully about the meaning of these cards…’[Fear]
-
-Hermit Upright
-Acacia: “Hermit, in the upright position. This card represents your past.” [Neutral]
-“This is telling me you were alone as a pup.” [Neutral]
-“Through your seclusion you were able to properly focus on your career, and guide yourself to where you are now.” [Happy]
- “Is that accurate?” [Confused]
-
-Zuckerbork: “...While it does have some truth to it...I can’t say your reading is 100% accurate.” [Neutral]
-“Even though I was alone, It’s not so much seclusion that led me down this path...”[Neutral]
-“You seem to be using broad strokes here. I suggest you become a bit more specific if you know what’s good for you…”[Angry] 
-
-Acacia: “Um...I understand!” [Fear]
-‘Shit I messed up! I need to think carefully about the meaning of these cards…’[Fear]
