@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: 3ef40e9ff74c19642bdc1af794e78475
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
